--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
         java-version: 14
 
     - name: Build project with Maven
-      run: mvn -B package --file pom.xml
+      run: mvn -B package --file server/pom.xml
 
     - run: mkdir staging && cp target/*jar-with-dependencies.jar staging
     
